# DentNav

./: .dockerignore  .env.example  .gitignore  API_CONTRACT.md  README.md  docker-compose.yml  package-lock.json  package.json  railway.toml
.next/: trace  trace-build
Backend/: API_CONTRACT.md  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260414_0001_create_users.py  20260420_0002_create_analyses.py  20260427_0003_users_names_has_filled_drop_token.py  20260511_0004_rename_user_id_has_filled_questionnaire_slim_analyses.py  20260511_0005_create_services.py  20260511_0006_create_doctors.py  20260511_0007_create_doctor_services.py  20260511_0008_create_slot_reservations.py  20260511_0009_create_bookings.py  20260511_0010_create_payments.py  20260511_0011_add_service_key.py
backend/app/: config.py  main.py
backend/app/api/v1/: admin.py  analysis.py  auth.py  bookings.py  doctors.py  payments.py  questionnaire.py  services.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analysis.py  booking.py  doctor.py  doctor_service.py  payment.py  service.py  slot_reservation.py  user.py
backend/app/schemas/: __init__.py  analysis.py  booking.py  doctor.py  payment.py  questionnaire.py  service.py
backend/app/services/: analysis.py  analysis_store.py  answers_validate.py  auth_google.py  calendly.py  questionnaire_load.py  razorpay_client.py  session.py  user_store.py  ws_manager.py
backend/scripts/: docker-entrypoint.sh
backend/tests/: test_answers_validate.py
(+162 files in other folders)
